--- a/.env.example
+++ b/.env.example
@@ -3,14 +3,13 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mariadb
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=slack_archive
+DB_USERNAME=slack_archive
+DB_PASSWORD=slack_archive
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -31,3 +30,9 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+
+#Slack App OAuth Access Token https://api.slack.com/apps/<APP_ID>/install-on-team
+SLACK_API_TOKEN=
+
+ELASTIC_HOST=localhost:9200
